@@ -1,3 +1,8 @@
+2006-07-22    <tino@firebird.03.softkill.net>
+
+	* file.h (tino_file_blocking, tino_file_nonblock) 
+	(tino_file_block): added
+
 2006-07-21    <tino@firebird.03.softkill.net>
 
 	* setuptino.sh: Thou shalt test thee! sigh .. the checkout process
